# appels-a-projets

./: .env.example  .gitignore  README.md  pyproject.toml  run_pipeline.py  scrape_projects.ipynb
.github/: copilot-instructions.md
appels_a_projets/connectors/: __init__.py  airtable_connector.py  appelaprojets.py  base.py  carenews.py  iledefrance_opendata.py  notion_connector.py  paris.py  professionbanlieue.py  ssd.py  ssd_ressources.py
appels_a_projets/jobs/: enrichment_paris_llm.ipynb  enrichment_ssd_llm.ipynb  inspect_idf.ipynb  inspect_idf_df.py  scrape_paris.ipynb
appels_a_projets/models/: __init__.py  aap.py
appels_a_projets/processing/: __init__.py  normalizer.py
appels_a_projets/utils/: pdf_extractor.py
data/: aap_export.csv  carenews_raw.json  iledefrance_raw.json
data/carenews/: metadata.json  metadata_enriched.json
data/iledefrance/: metadata.json  metadata_enriched.json
data/paris/: metadata.json  metadata_enriched.json
data/ssd/: metadata.json  metadata_enriched.json
docs/: specification.md
scripts/: create_airtable_table.py  create_notion_database.py  enrich_dataset.py  enrich_paris_with_llm.py  export_csv.py  push_to_airtable.py  push_to_notion.py  run_pipeline.py  setup_airtable.py  test_model.py  test_notion.py
