[project]
name = "appels-a-projets"
version = "0.1.0"
description = "Collecte et classification des appels à projets (API + scraping)"
authors = [{name = "Walid", email = "walid@example.com"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.3",
    "python-dateutil>=2.9.0",
    "pyyaml>=6.0.1",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "notebook>=7.5.1",
    "ipykernel>=7.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
